# rust-azure-bill-analysis

./: .gitignore  Azuredisks-Unattached-20240517.csv  README-aks.md  README-bill_analysis.md  README-reservation_plan.md  README.md  bill_analysis.rs  flowchartTD.md  pwsh-unattached-VHD.ps1  run-mcp-billing.sh  run_bill_analysis_mcp.sh
bill_analysis/: .env.example  CONTEXT.md  Cargo.toml  run-multi-month.sh
bill_analysis/.cargo/: config.toml
bill_analysis/docs/adr/: 0001-date-shorthand-bill-path.md  0002-extract-merge-summaries.md  0003-accumulate-helper.md  0004-bill-filter-struct.md  0005-split-global-opts.md  0006-separate-display-data-from-rendering.md  0007-mcp-server-design.md  0008-entra-oauth-auth-code-flow.md  0009-tracing-for-structured-logging.md
bill_analysis/src/: az_disk.rs  bill.rs  bills.rs  blob_source.rs  cmd_parse.rs  find_files.rs  lib.rs  main.rs  money.rs
bill_analysis/src/bill/: billentry.rs  bills.rs  billsummary.rs  costtype.rs  display.rs  mod.rs  tags.rs
bill_analysis/src/bill/calc/: summary.rs
bill_analysis/src/bills/: bill_entry.rs  bill_filter.rs  bills_impl_basic.rs  bills_impl_cost_by_any.rs  bills_impl_cost_by_sub.rs  bills_impl_currency.rs  bills_struct.rs  bills_sum_data.rs  cost_query.rs  cost_type_enum.rs  display.rs  mod.rs  repository.rs  summary.rs  tags.rs
bill_analysis/src/bills/summary/: mod.rs
bill_analysis/terraform/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  storage.tf  terraform.tfvars.example  variables.tf
bill_analysis/tests/: azure_test_data_01.csv  azure_test_disks_01.csv  azure_test_disks_02.txt  azure_test_nzd_usd_latest.csv  azure_test_nzd_usd_prev.csv  integration.rs
reservation_plan/: .env.example  .gitignore  Cargo.toml  README_reservations.md  all_reservations.json  az_get_all_reservations.sh
reservation_plan/src/: main.rs  print_summary.rs  reservation.rs  reservation_recommend.rs
