[package]
name = "bill_analysis"
version = "0.1.5-20251203"
edition = "2024"

[[bin]]
name = "bill_analysis"
path = "src/main.rs"

[[bin]]
name = "bill_analysis_mcp"
path = "src/bin/mcp.rs"

[dependencies]
chrono = "0.4"
clap = { version = "^4.5.4", features = ["derive"] }
colored = "^2.1.0"
csv = "^1.3.0"
memmap = "^0.7.0"
once_cell = "^1.20.2"
regex = "^1.10.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"

[dependencies.axum]
version = "0.8"

[dependencies.tokio]
version = "1"
features = ["full"]
