[package]
name = "bill_analysis"
version = "0.1.5-20251203"
edition = "2024"

[[bin]]
name = "bill_analysis"
path = "src/main.rs"

[[bin]]
name = "bill_analysis_mcp"
path = "src/bin/mcp.rs"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "^4.5.4", features = ["derive"] }
colored = "^2.1.0"
csv = "^1.3.0"
dotenvy = "0.15"
jsonwebtoken = "9"
memmap = "^0.7.0"
once_cell = "^1.20.2"
rand = "0.8"
regex = "^1.10.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dependencies.axum]
version = "0.8"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["full"]
